Fix button spacing

--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -102,6 +102,7 @@
     height: 28px;
     font-weight: bold;
     border-radius: 4px;
+    margin: 10px;
   }
 
   .submit-button {
